force-app/main/default/objects/c_Log__e/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description>List of categories the entry contains data for</description>
    <label>Categories</label>
    <length>255</length>
    <type>Text</type>
</CustomField>