force-app/main/default/objects/c_Log__e/fields/Data__c.field-meta.xml
<CustomField>
    <fullName>Data__c</fullName>
    <description>JSON Data of the event</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>