force-app/main/default/objects/c_Log__e/fields/LimitWarning__c.field-meta.xml
<CustomField>
    <fullName>LimitWarning__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A platform limit was detected to have been reached or is within certain parameters</description>
    <label>Limit Warning</label>
    <type>Checkbox</type>
</CustomField>