force-app/main/default/objects/c_Log__e/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <defaultValue>&quot;Untitled Entry &quot;+TEXT(now())</defaultValue>
    <description>The title of the log entry</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>